--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ li, a{
 
 header{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     padding: 10px 10%;
 }
@@ -24,6 +24,7 @@ header{
 .logo{
     width:50px;
     cursor: pointer;
+    margin-right: auto;
 }
 
 .nav_links{
@@ -33,4 +34,26 @@ header{
 .nav_links li{
     display: inline-block;
     padding: 0px 20px;
+}
+
+.nav_links li a{
+    transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover{
+    color: #0088a9;
+}
+
+button{
+    margin-left: 20px;
+    padding: 9px 25px;
+    background-color: rgba(0, 136, 169, 0.5);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover{
+    background-color: rgba(0, 136, 169, 0.8);
 }
