--- a/style.css
+++ b/style.css
@@ -1,4 +1,65 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+.header{
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(images/ampli-y-baterias.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+nav{
+    display:flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav img{
+    padding-top: 20px;
+    height: 70px;
+}
+
+.nav-links{
+    flex: 1;
+    text-align: right;
+}
+
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.nav-links ul li a{
+    color: rgb(207, 204, 204);
+    text-decoration: none;
+    font-size: 13px;
+}
+
+.nav-links ul li::after{
+    content: '';
+    width:0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+}
+
+.nav-links ul li:hover::after{
+    width: 100%;
+
+}
+
+/*
 
 *{
     margin: 0;
@@ -14,7 +75,11 @@ li, a{
     text-decoration: none;
 }
 
-header{
+.primera-parte{
+    
+}
+
+.header{
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -57,3 +122,12 @@ button{
 button:hover{
     background-color: rgba(0, 136, 169, 0.8);
 }
+
+.text-box{
+    background-image: url(images/drummer.jpg);
+}
+
+.text-box h1 p{
+    color: #fff;
+}
+*/
