--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
     font-family: 'Poppins', sans-serif;
 }
 
+/*     //              //
+       // Landing page //
+       //              //
+*/
+
 .header{
     min-height: 100vh;
     width: 100%;
@@ -48,7 +53,7 @@ nav img{
     content: '';
     width:0%;
     height: 2px;
-    background: #f44336;
+    background: #2ba3ad;
     display: block;
     margin: auto;
     transition: 0.3s;
@@ -56,78 +61,109 @@ nav img{
 
 .nav-links ul li:hover::after{
     width: 100%;
-
-}
-
-/*
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-li, a{
-    font-weight: 500;
-    font-size: 16px;
-    color:black;
-    text-decoration: none;
-}
-
-.primera-parte{
-    
-}
-
-.header{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 10px 10%;
-}
-
-.logo{
-    width:50px;
-    cursor: pointer;
-    margin-right: auto;
-}
-
-.nav_links{
-    list-style: none;
-}
-
-.nav_links li{
-    display: inline-block;
-    padding: 0px 20px;
-}
-
-.nav_links li a{
-    transition: all 0.3s ease 0s;
-}
-
-.nav_links li a:hover{
-    color: #0088a9;
-}
-
-button{
-    margin-left: 20px;
-    padding: 9px 25px;
-    background-color: rgba(0, 136, 169, 0.5);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-}
-
-button:hover{
-    background-color: rgba(0, 136, 169, 0.8);
 }
 
 .text-box{
-    background-image: url(images/drummer.jpg);
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-.text-box h1 p{
+.text-box h1{
+    font-size: 50px;
+}
+
+.text-box p{
+    margin: 10px 0px 40px;
+    font-size: 14px;
     color: #fff;
 }
+
+.textoLanding-mobile{
+    display: none;
+}
+
+.descarga-inline{
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+.descarga-inline:hover{
+    border: 1px solid #2ba3ad;
+    background-color: #2ba3ad;
+    transition: 0.3s;
+
+}
+
+nav .fa{
+    display: none
+}
+
+/*
+    //                         //
+    // Responsive Landing Page //
+    //                         //
 */
+
+@media (max-width: 415px){
+        .text-box h1{
+            font-size: 15px;
+        }
+
+        .text-box p{
+            font-size: 10px;
+        }
+
+        .textoLanding-pc{
+            display: none;
+        }
+
+        .textoLanding-mobile{
+            display: inline-block;
+        }
+
+        .descarga-inline{
+            padding: 6px 17px;
+        }
+
+        .nav-links ul li{
+            display: block;
+        }
+
+        .nav-links{
+            position: absolute;
+            background: rgba(41, 86, 90, 0.5);
+            height: 100vh;
+            width: 200px;
+            top: 0px;
+            right: -200px;
+            text-align: left;
+            z-index: 2;
+            transition: 1s;
+        }
+
+        nav .fa{
+            display: block;
+            color: #fff;
+            margin: 10px;
+            font-size: 22px;
+            cursor: pointer;
+        }
+
+        .nav-links ul{
+            padding: 30px;
+        }
+
+
+}
