--- a/style.css
+++ b/style.css
@@ -3,7 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
+
+*::-webkit-scrollbar {
+    display: none;
+  }
 
 /*     //              //
        // Landing page //
@@ -165,5 +171,47 @@ nav .fa{
             padding: 30px;
         }
 
+}
 
+
+/*     //                  //
+       // Nuestro proyecto //
+       //                  //
+*/
+
+.proyecto{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.proyecto h1{
+    width: 50%;
+    margin: auto;
+    font-size: 36px;
+    font-weight: 600;
+    border-bottom: 1px double rgb(0, 0, 0);
+}
+
+.proyecto p{
+    color: #777;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+}
+
+.row{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.proyecto-col{
+    flex-basis: 31%;
+    background: #F9F3DF;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
 }
