--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@
     position: relative;
 }
 
+.home{
+    margin-right:auto;
+}
+
 nav{
     display:flex;
     padding: 2% 6%;
@@ -122,7 +126,7 @@ nav .fa{
     //                         //
 */
 
-@media (max-width: 415px){
+@media (max-width: 500px){
         .text-box h1{
             font-size: 15px;
         }
@@ -214,4 +218,27 @@ nav .fa{
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
+    transition: 0.3s;
+}
+
+h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+.proyecto-col:hover{
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.2);
+}
+
+/*
+    //                             //
+    // Responsive Nuestro Proyecto //
+    //                             //
+*/
+
+@media (max-width:700px){
+    .row{
+        flex-direction: column;
+    }
 }
