--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@
     display: none;
   }
 
+p{
+    color: #7a7a7a;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 22px;
+    padding: 10px;
+}
+
 /*     //              //
        // Landing page //
        //              //
@@ -85,6 +93,9 @@ nav img{
 
 .text-box h1{
     font-size: 50px;
+    width: auto;
+    margin: auto;
+    border-bottom:none;
 }
 
 .text-box p{
@@ -187,10 +198,10 @@ nav .fa{
     width: 80%;
     margin: auto;
     text-align: center;
-    padding-top: 100px;
+    padding-top: 60px;
 }
 
-.proyecto h1{
+.h1-con-lineas{
     width: 50%;
     margin: auto;
     font-size: 36px;
@@ -198,12 +209,16 @@ nav .fa{
     border-bottom: 1px double rgb(0, 0, 0);
 }
 
-.proyecto p{
+.proyecto-col p{
     color: #777;
     font-size: 14px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
+}
+
+.p-bajo-proyecto{
+    margin-top: 20px;
 }
 
 .row{
@@ -241,4 +256,140 @@ h3{
     .row{
         flex-direction: column;
     }
+}
+
+/*     //         //
+      // Equipo  //
+     //         //
+
+*/
+
+/*.row{
+    width: 1100px;
+    justify-content: space-around;
+    align-items: center;
+}*/
+
+.equipo{
+    width: 80%;
+    margin: auto;
+    padding-top: 60px;
+    text-align: center;
+}
+
+.equipo h1{
+    margin-bottom: 20px;
+}
+
+.equipo-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    text-align: left;
+    background: #Fff3f3;
+    padding: 25px;
+    display: flex;
+}
+
+.equipo-col img{
+    height: 40px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 50%;
+}
+
+.equipo-col p{
+    padding: 0;
+}
+
+.equipo-col h3{
+    margin-top: 15px;
+    text-align: left;
+}
+
+/*     //                   //
+      // Responsive Equipo //
+     //                   //
+*/
+@media (max-width: 700px){
+    .equipo-col{
+        margin-bottom: 30px;
+    }
+
+    .equipo-col img{
+        margin-left: 0px;
+        margin-right: 15px;
+    }
+}
+
+/*     //                //
+      // Call To Action //
+     //                //
+*/
+
+.cta h1{
+    width: auto;
+    margin: auto;
+    font-size: 36px;
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+}
+
+.cta{
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(images/drummer.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+}
+
+/*     //                //
+      // Responsive CTA //
+     //                //
+*/
+
+@media (max-width: 700px){
+    .cta h1{
+        font-size: 28px;
+    }
+}
+
+/*    //        //
+     // Footer //
+    //        //
+*/
+
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+
+.footer p{
+    margin-bottom: 10px;
+}
+
+.icons .fa{
+    margin-top: 10px;
+    color: #2ba3ad;
+    margin-left: 13px;
+    margin-right: 13px;
+    cursor: pointer;
+    padding: 18px;
+    font-size: 40px;;
+}
+
+.fa-heart-o{
+    margin-top: 10px; 
+    color: #f44336;
 }
