--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ nav .fa{
         }
 
         .nav-links{
-            position: absolute;
+            position: fixed;
             background: rgba(41, 86, 90, 0.5);
             height: 100vh;
             width: 200px;
@@ -393,3 +393,99 @@ h3{
     margin-top: 10px; 
     color: #f44336;
 }
+
+/*    //            //
+     // Sub-header //
+    //            //
+*/
+
+.sub-header{
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(images/baterista-tocando.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+
+.sub-header h1{
+    font-size: 50px;
+    margin-top: 60px;
+}
+
+@media (max-width: 700px){
+    .sub-header h1{
+        font-size: 40px;
+        margin-top: 150px;
+    }
+}
+
+/*    //             //
+     // Contacto    //
+    //             //
+*/
+
+.location{
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+
+.location iframe{
+    width: 100%;
+}
+
+.contact-us{
+    width: 80%;
+    margin: auto;
+}
+
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.contact-col div span p{
+    margin: 0;
+    padding: 0;
+}
+
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+}
+
+.contact-col div .fa{
+    font-size: 28px;
+    color: #2ba3ad;
+    margin: 10px;
+    margin-right: 30px;
+}
+
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+}
+
+.blue-btn{
+    border: 1px solid #2ba3ad;
+    background: transparent;
+    color: #2ba3ad;
+}
+
+.blue-btn:hover{
+    color: #fff;
+}
+
