--- a/style.css
+++ b/style.css
@@ -929,3 +929,18 @@ form .form-content .sign-up-text{
     font-weight: bold;
     color: #009879;
 }
+
+/*  Descarga  */
+
+.header-descarga{
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(images/many-dice.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.header-descarga h1{
+    font-size: 40px;
+}
